# embeded-python

./: CMakeLists.txt  README.md
include/: configuration.h  constants.h  fft.h  globals.h  lib-python.h  math_functions.h  optionparser.h  sin.h  sincos.h  utilities.h  vdtcore_common.h
python/: distributions.py  libpython.py
src/: lib-python.cpp
tests/: pass-by-ref.cpp  print-main.cpp  simple-plot.cpp
